# domo_data_generator

./: .env.example  .gitignore  DATASET_PROMPT_TEMPLATE.md  README.md  pyproject.toml  requirements.txt
catalog/: financial_gl_entries.yaml  financial_invoices.yaml  ga_pageviews.yaml  ga_sessions.yaml  marketing_facebook_ads.yaml  marketing_google_ads.yaml  marketing_hubspot_contacts.yaml  salesforce_accounts.yaml  salesforce_contacts.yaml  salesforce_opportunities.yaml
datagen/: .env.example  __init__.py  __main__.py  catalog_loader.py  cli.py  config.py  date_roller.py  domo_client.py  entity_pool.py  models.py  output.py  state.py  uploader.py
datagen/catalog/: adpoint_flights.yaml  adpoint_line_items.yaml  adpoint_orders.yaml  financial_gl_entries.yaml  health_demographics.yaml  health_lab_results.yaml  health_vitals.yaml  marketing_facebook_ads.yaml  marketing_google_ads.yaml  marketing_hubspot_contacts.yaml  marketing_market_leads.yaml  marketing_marketo_leads.yaml  salesforce_accounts.yaml
datagen/generators/: __init__.py  base.py  financial.py  google_analytics.py  health.py  marketing.py  salesforce.py
